gtk/gtkwindow.c
@@ -6023,6 +6023,8 @@ gtk_window_should_use_csd (GtkWindow *window)
   if (priv->type == GTK_WINDOW_POPUP)
     return FALSE;
 
+  csd_env = g_getenv ("GTK_CSD");
+
 #ifdef GDK_WINDOWING_BROADWAY
   if (GDK_IS_BROADWAY_DISPLAY (gtk_widget_get_display (GTK_WIDGET (window))))
     return TRUE;
@@ -6038,7 +6040,11 @@ gtk_window_should_use_csd (GtkWindow *window)
     return TRUE;
 #endif
 
-  csd_env = g_getenv ("GTK_CSD");
+#ifdef GDK_WINDOWING_WIN32
+  if (g_strcmp0 (csd_env, "0") != 0 &&
+      GDK_IS_WIN32_DISPLAY (gtk_widget_get_display (GTK_WIDGET (window))))
+    return TRUE;
+#endif
 
   return (g_strcmp0 (csd_env, "1") == 0);
 }
